--- a/todo-list/main.css
+++ b/todo-list/main.css
@@ -1,6 +1,47 @@
-#checkboxes {
-    background-color: blue;
+* {
+    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Roboto Mono', monospace;
 }
-#work {
-    color: aqua;
+body {
+    background-color: cornflowerblue;
+}
+#container {
+    width: 500px;
+    height: 300px;
+    margin-top: 300px;
+    text-align: center;
+}
+#title {
+    color:white;
+    font-weight: bold;
+}
+#sub-container {
+    width: 100%;
+    height: 300px;
+    background-color: white;
+    border: 5px solid black;
+    border-radius: 25px;
+}
+#list-group {
+    padding-top: 20px;
+}
+.list-group-item {
+    border: none !important;
+    border-bottom: 1px solid #eee !important;
+}
+#input-group{
+    margin-top: 10px;
+    border: 3px solid black;
+    border-radius: 13px;
+}
+#input-area {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+#button-area {
+    border: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #0D62FD;
+    color: white;
 }
