--- a/todo-list/main.css
+++ b/todo-list/main.css
@@ -9,7 +9,7 @@ body {
     width: 500px;
     height: 300px;
     margin-top: 300px;
-    text-align: center;
+    text-align: left;
 }
 #title {
     color:white;
