--- a/todo-list/MY todo-list/exercise2.css
+++ b/todo-list/MY todo-list/exercise2.css
@@ -1,42 +1,3 @@
-* {
-    background-color: rgb(255, 255, 255);
-}
-
-#sub-container {
-    width: 400px;
-    height: 300px;
-
-}
-
-#listgroup {
-    list-style: none;
-    margin-left: -20px;
-
-    padding-top: 5px;
-    padding-bottom: 5px;
-
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
-}
-
-#completespan {
-
-    font-size: 10px;
-
-    background-color: rgb(66, 66, 230);
-    color: white;
-
-    border-radius: 20px;
-    border-inline-start: 2px;
-
-        margin-top: 3px;
-        margin-right: 3px;
-        padding-top: 2px;
-        padding-bottom: 2px;
-        padding-left: 6px;
-        padding-right: 6px;
-
-    float:right;
-    position: relative;
-
+.span{
+    background-color: pink;
 }
